apps/gotrue/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gotrue
  labels:
    pod-security.kubernetes.io/enforce: baseline
