apps/gotrue/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotrue
  namespace: gotrue
spec:
  type: ClusterIP
  selector:
    app: gotrue
  ports:
    - port: 9999
      targetPort: 9999
